# word-counter

./: .gitignore  CMakeLists.txt  README.md
word-counter/: main.cpp
word-counter.xcodeproj/: project.pbxproj
word-counter.xcodeproj/project.xcworkspace/xcuserdata/ali.xcuserdatad/: UserInterfaceState.xcuserstate
word-counter/inc/: Dictionary.h  NumList.h  NumList.hpp  Word.h  WordList.h
word-counter/src/: Dictionary.cpp  NumList.cpp  Word.cpp  WordList.cpp
